[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/Orb.gd" type="Script" id=1]
[ext_resource path="res://sprites/orb_purple.png" type="Texture" id=2]
[ext_resource path="res://sprites/triangle.png" type="Texture" id=3]
[ext_resource path="res://prefabs/Laser.tscn" type="PackedScene" id=4]
[ext_resource path="res://audio/laser.mp3" type="AudioStream" id=5]
[ext_resource path="res://ShakeCamera/ShakeCamera2D.gd" type="Script" id=6]
[ext_resource path="res://prefabs/Explosion.tscn" type="PackedScene" id=7]
[ext_resource path="res://audio/399303__deleted-user-5405837__explosion-012.mp3" type="AudioStream" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 15.695

[sub_resource type="Gradient" id=4]
colors = PoolColorArray( 0.392157, 0.0823529, 0.54902, 1, 1, 1, 1, 1 )

[node name="Orb" type="RigidBody2D" groups=["orb"]]
position = Vector2( 523, 529.567 )
rotation = -1.5708
gravity_scale = 0.0
angular_damp = 5.0
script = ExtResource( 1 )
engine_thrust = 100
spin_thrust = 300
Bullet = ExtResource( 4 )
Explosion = ExtResource( 7 )

[node name="sprite" type="Sprite" parent="."]
position = Vector2( 0, 0.997314 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )

[node name="dir" type="Sprite" parent="."]
position = Vector2( 5.57422, 0.00390625 )
rotation = 1.5708
scale = Vector2( 0.015, 0.015 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.432983, 0 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
offset_v = -1.0
script = ExtResource( 6 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
show_behind_parent = true
amount = 50
lifetime_randomness = 1.0
local_coords = false
emission_shape = 1
emission_sphere_radius = 10.0
gravity = Vector2( 0, 9 )
damping = 5.0
damping_random = 1.0
color_ramp = SubResource( 4 )

[node name="muzzle" type="Position2D" parent="."]
position = Vector2( 7.56702, 0 )

[node name="fire_sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0

[node name="explocde_position" type="Position2D" parent="."]

[node name="explode_sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[connection signal="collect_orb" from="." to="." method="_on_Orb_collect_orb"]
[connection signal="hit_flower" from="." to="." method="_on_Orb_hit_flower"]
[connection signal="on_hit" from="." to="." method="_on_Orb_on_hit"]
